--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -47,6 +47,30 @@ mark {
   opacity: 0.7;
 }
 
+/* Hendi Adrianto */
+
+.contents {
+  height: 300px;
+  margin-top: 100px;
+}
+
+.section-title {
+  border-bottom: 2px solid #dee7ec;
+  font-size: 28px;
+  padding-bottom: 15px;
+  margin-bottom: 50px;
+}
+
+.contents-item {
+  float: left;
+  margin-right: 50px;
+}
+
+.contents-item p {
+  font-size: 24px;
+  margin-top: 30px;
+}
+
 /* Irsyad Nur Hakim */
 
 header {
@@ -191,6 +215,6 @@ form .submit:active {
   width: 100%;
   border-top: 1px solid white;
   text-align: center;
-  color: white;
+  color: #222;
   padding-top: 10px;
 }
