--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,12 +1,12 @@
 /* Khoirul Huda */
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 0;
   font-family: "Lucida Grande";
-  padding: 0;
 }
 
 a {
@@ -14,9 +14,11 @@ a {
 }
 
 .top-wrapper {
+  left: 0;
   padding-top: 180px;
   padding-bottom: 100px;
   color: white;
+  background-color: grey;
   background-image: url(D:coding/business-code-coding-computer-270360.jpg);
   background-size: cover;
   text-align: center;
@@ -47,11 +49,22 @@ mark {
   opacity: 0.7;
 }
 
-/* Hendi Adrianto */
+/* Hendi */
+.contents-hendi {
+  left: 0;
+  text-align: center;
+  padding: 100px;
+  font-size: 20px;
+  background-color: orange;
+  margin-bottom: 20px;
+}
+
+/* Helma */
 
 .contents {
+  left: 0;
   height: 300px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .section-title {
@@ -105,6 +118,9 @@ header {
 
 /* Imam Mustofa */
 
+a {
+  text-decoration: none;
+}
 /*footer style*/
 .main {
   padding-left: 20px;
@@ -113,17 +129,17 @@ header {
   background: #222;
   height: 300px;
   position: absolute;
-  top: 60%;
   left: 0;
   right: 0;
   bottom: 0;
+  top: 100%;
 }
 .footer-top {
   width: 25%;
-  height: 100%;
   color: rgb(236, 229, 229);
   float: left;
   padding-left: 15px;
+  height: 100%;
 }
 .footer-top img {
   padding-top: 13px;
@@ -215,6 +231,6 @@ form .submit:active {
   width: 100%;
   border-top: 1px solid white;
   text-align: center;
-  color: #222;
+  color: white;
   padding-top: 10px;
 }
