--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,4 +1,4 @@
-/* Khoirul Huda */
+/* */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,6 +7,10 @@
 
 body {
   font-family: "Lucida Grande";
+}
+
+.main {
+  height: 100%;
 }
 
 a {
@@ -24,12 +28,13 @@ a {
   text-align: center;
 }
 
-.container {
-  width: 1170px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+@keyframes changecolor {
+  from {
+    color: white;
+  }
+  to {
+    color: black;
+  }
 }
 
 .top-wrapper h1 {
@@ -39,17 +44,32 @@ a {
   color: red;
 }
 
+.container {
+  left: 0;
+  width: 1170;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .top-wrapper p {
   margin-bottom: 3px;
   opacity: 0.7;
 }
 
 mark {
+  left: 0;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   background: red;
   opacity: 0.7;
+  animation: changecolor 5s infinite;
 }
 
-/* Hendi */
+/*  */
 .contents-hendi {
   left: 0;
   text-align: center;
@@ -59,17 +79,50 @@ mark {
   margin-bottom: 20px;
 }
 
-/* Helma */
+.img {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: auto;
+  max-width: 450px;
+  width: 100%;
+  display: block;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.img-tim {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: auto;
+  max-width: 250px;
+  width: 100%;
+  display: block;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+/*  */
 
 .contents {
+  display: block;
   left: 0;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   height: 300px;
   margin-top: 50px;
+  position: relative;
 }
 
 .section-title {
   border-bottom: 2px solid #dee7ec;
   font-size: 28px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   padding-bottom: 15px;
   margin-bottom: 50px;
 }
@@ -80,12 +133,20 @@ mark {
 }
 
 .contents-item p {
+  text-align: center;
+}
+
+.contents-item p {
   font-size: 24px;
   margin-top: 30px;
 }
 
-/* Irsyad Nur Hakim */
-
+/*  */
+.containerr {
+  max-width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 header {
   height: 65px;
   width: 100%;
@@ -96,53 +157,105 @@ header {
   left: 0;
   opacity: 0.7;
 }
-
-.logo {
-  width: 150px;
+.header-right {
   float: left;
+}
+.logo {
+  width: 100px;
   margin-bottom: 10px;
+  margin-top: 15px;
+  position: absolute;
+  line-height: 65px;
 }
 
 .header-left {
   cursor: pointer;
   font-size: 20px;
-  color: #2e52a5;
   display: block;
+  line-height: 65px;
 }
-.header-left li {
-  font-style: "Lucida Grande";
+.header-left a {
+  font-family: "Lucida Grande";
   float: right;
-  margin: 0 20px;
+  text-decoration: none;
+  margin: 0 10px;
+  padding: 0 20px;
   list-style: none;
+  color: white;
+}
+.header-left a:hover {
+  background-color: rgba(255, 0, 0, 0.8);
+}
+.login {
+  background-color: rgba(255, 0, 0, 0.5);
+}
+.login:active {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+  float: right;
+}
+.menu-icon {
+  float: right;
+  border: none;
+  display: none;
+  cursor: pointer;
+  font-size: 25px;
+  margin: 20px 0;
+  color: white;
+  background-color: black;
+}
+.show {
+  display: block;
+  margin-right: 65px;
 }
 
-/* Imam Mustofa */
-
-a {
+.dropdown-content {
+  position: absolute;
+  display: none;
+  margin-top: 65px;
+  margin-right: 10px;
+  background-color: black;
+  z-index: 1;
+  float: left;
+  cursor: pointer;
+  padding-right: 150px;
+  margin-left: 410px;
+}
+.dropdown-content a {
+  color: white;
+  padding: 20px 20px;
+  display: block;
   text-decoration: none;
 }
+
+/*  */
+
 /*footer style*/
-.main {
-  padding-left: 20px;
-}
+
 .page-footer {
   background: #222;
   height: 300px;
-  position: absolute;
+  display: inline-block;
+  width: 100%;
+  /*position: absolute;
+  top: 90%;
   left: 0;
   right: 0;
-  bottom: 0;
-  top: 100%;
+  bottom: 0;*/
 }
 .footer-top {
-  width: 25%;
+  width: 30%;
+  height: 100%;
   color: rgb(236, 229, 229);
   float: left;
   padding-left: 15px;
-  height: 100%;
+  padding-top: 15px;
 }
 .footer-top img {
-  padding-top: 13px;
+  padding-top: 0px;
   width: 25%;
 }
 .footer-top p {
@@ -155,15 +268,19 @@ a {
   height: 100%;
   color: rgb(236, 229, 229);
   float: left;
-  padding-left: 30px;
+  padding-left: 40px;
+  padding-top: 15px;
 }
 .footer-middle h2 {
   padding-left: 40px;
   margin-bottom: 0;
+  padding-bottom: 18px;
 }
 .footer-middle ul li {
   list-style: none;
   padding-bottom: 10px;
+  padding-left: 40px;
+  padding-top: 10px;
 }
 .footer-middle ul li a {
   text-decoration: none;
@@ -179,6 +296,7 @@ a {
   height: 100%;
   color: rgb(236, 229, 229);
   float: left;
+  padding-top: 15px;
 }
 .footer-bottom h2 {
   padding-left: 0;
@@ -190,7 +308,7 @@ form {
   transition: all 1s ease-in-out;
 }
 .form-control {
-  width: 600px;
+  width: 450px;
   background: transparent;
   border: none;
   outline: none;
@@ -198,6 +316,7 @@ form {
   color: rgb(59, 210, 248);
   font-size: 18px;
   margin-bottom: 16px;
+  overflow: hidden;
 }
 form .submit {
   border-color: transparent;
@@ -206,7 +325,7 @@ form .submit {
   text-align: center;
   display: inline;
   background-color: #757a77;
-  width: 33%;
+  width: 40%;
   height: 20px;
   font-size: 15px;
   border-radius: 5px;
@@ -218,19 +337,12 @@ form .submit:hover {
 form .submit:active {
   background-color: #888686;
 }
-
-.footer-ground {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  float: left;
-}
 .footer-inside-ground {
+  display: inline-block;
   width: 100%;
   border-top: 1px solid white;
   text-align: center;
   color: white;
-  padding-top: 10px;
+  padding-top: 15px;
+  margin-top: 10px;
 }
